--- a/DOM/list/css/simple.css
+++ b/DOM/list/css/simple.css
@@ -46,11 +46,8 @@ ul,ol {
   background: lightpink;
 }
 
-
-
-
 .active {
-  background: green;
+  background: lightskyblue;
 }
 .show {
   display: block;
